--- a/notebooks/1_train_pytorch_classifier.ipynb
+++ b/notebooks/1_train_pytorch_classifier.ipynb
@@ -12,15 +12,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Constants"
+    "# Initialise"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.insert(1, '../') \n",
+    "\n",
     "# where to save torch model output\n",
     "MODEL_DIR = 'model'"
    ]
@@ -34,12 +37,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['train_x', 'train_y', 'test_x', 'test_y'])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pickle\n",
-    "plagiarism_data = pickle.load(open('../udacity/plagiarism_data.p', 'rb'))\n",
+    "plagiarism_data = pickle.load(open('../../udacity/plagiarism_data.p', 'rb'))\n",
     "plagiarism_data.keys()"
    ]
   },
@@ -51,6 +65,27 @@
    "source": [
     "# unpack data\n",
     "train_x, train_y, test_x, test_y = plagiarism_data.values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/d14xj1/repos/plagiarism_detection/medium/notebooks'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getcwd()"
    ]
   },
   {
@@ -215,60 +250,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# torch imports\n",
-    "import torch.nn.functional as F\n",
-    "import torch.nn as nn\n",
+    "import os\n",
+    "os.getcwd()\n",
     "\n",
-    "class BinaryClassifier(nn.Module):\n",
-    "    \"\"\"\n",
-    "    Define a neural network that performs binary classification.\n",
-    "    The network should accept your number of features as input, and produce \n",
-    "    a single sigmoid value, that can be rounded to a label: 0 or 1, as output.\n",
-    "    \n",
-    "    Notes on training:\n",
-    "    To train a binary classifier in PyTorch, use BCELoss.\n",
-    "    BCELoss is binary cross entropy loss, documentation: https://pytorch.org/docs/stable/nn.html#torch.nn.BCELoss\n",
-    "    \"\"\"\n",
-    "\n",
-    "    ## TODO: Define the init function, the input params are required (for loading code in train.py to work)\n",
-    "    def __init__(self, input_features, hidden_dim, output_dim):\n",
-    "        \"\"\"\n",
-    "        Initialize the model by setting up linear layers.\n",
-    "        Use the input parameters to help define the layers of your model.\n",
-    "        :param input_features: the number of input features in your training/test data\n",
-    "        :param hidden_dim: helps define the number of nodes in the hidden layer(s)\n",
-    "        :param output_dim: the number of outputs you want to produce\n",
-    "        \"\"\"\n",
-    "        super(BinaryClassifier, self).__init__()\n",
-    "\n",
-    "        # define any initial layers, here\n",
-    "        self.fc1 = nn.Linear(input_features, hidden_dim)\n",
-    "        self.dropout = nn.Dropout(0.3)\n",
-    "        self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
-    "        \n",
-    "        # sigmoid layer\n",
-    "        self.sig = nn.Sigmoid()\n",
-    "        \n",
-    "    ## TODO: Define the feedforward behavior of the network\n",
-    "    def forward(self, x):\n",
-    "        \"\"\"\n",
-    "        Perform a forward pass of our model on input features, x.\n",
-    "        :param x: A batch of input features of size (batch_size, input_features)\n",
-    "        :return: A single, sigmoid-activated value as output\n",
-    "        \"\"\"\n",
-    "        \n",
-    "        # define the feedforward behavior\n",
-    "        x = self.fc1(x)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.dropout(x)\n",
-    "        x = self.fc2(x)\n",
-    "        x = self.sig(x)\n",
-    "        \n",
-    "        return x"
+    "from src.utils.model import BinaryClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m# torch imports\u001b[39;49;00m\r\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36mnn\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36mfunctional\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mF\u001b[39;49;00m\r\n",
+      "\u001b[34mimport\u001b[39;49;00m \u001b[04m\u001b[36mtorch\u001b[39;49;00m\u001b[04m\u001b[36m.\u001b[39;49;00m\u001b[04m\u001b[36mnn\u001b[39;49;00m \u001b[34mas\u001b[39;49;00m \u001b[04m\u001b[36mnn\u001b[39;49;00m\r\n",
+      "\r\n",
+      "\u001b[34mclass\u001b[39;49;00m \u001b[04m\u001b[32mBinaryClassifier\u001b[39;49;00m(nn.Module):\r\n",
+      "    \u001b[33m\"\"\"\u001b[39;49;00m\r\n",
+      "\u001b[33m    Define a neural network that performs binary classification.\u001b[39;49;00m\r\n",
+      "\u001b[33m    The network should accept your number of features as input, and produce \u001b[39;49;00m\r\n",
+      "\u001b[33m    a single sigmoid value, that can be rounded to a label: 0 or 1, as output.\u001b[39;49;00m\r\n",
+      "\u001b[33m    \u001b[39;49;00m\r\n",
+      "\u001b[33m    Notes on training:\u001b[39;49;00m\r\n",
+      "\u001b[33m    To train a binary classifier in PyTorch, use BCELoss.\u001b[39;49;00m\r\n",
+      "\u001b[33m    BCELoss is binary cross entropy loss, documentation: https://pytorch.org/docs/stable/nn.html#torch.nn.BCELoss\u001b[39;49;00m\r\n",
+      "\u001b[33m    \"\"\"\u001b[39;49;00m\r\n",
+      "\r\n",
+      "    \u001b[37m## TODO: Define the init function, the input params are required (for loading code in train.py to work)\u001b[39;49;00m\r\n",
+      "    \u001b[34mdef\u001b[39;49;00m \u001b[32m__init__\u001b[39;49;00m(\u001b[36mself\u001b[39;49;00m, input_features, hidden_dim, output_dim):\r\n",
+      "        \u001b[33m\"\"\"\u001b[39;49;00m\r\n",
+      "\u001b[33m        Initialize the model by setting up linear layers.\u001b[39;49;00m\r\n",
+      "\u001b[33m        Use the input parameters to help define the layers of your model.\u001b[39;49;00m\r\n",
+      "\u001b[33m        :param input_features: the number of input features in your training/test data\u001b[39;49;00m\r\n",
+      "\u001b[33m        :param hidden_dim: helps define the number of nodes in the hidden layer(s)\u001b[39;49;00m\r\n",
+      "\u001b[33m        :param output_dim: the number of outputs you want to produce\u001b[39;49;00m\r\n",
+      "\u001b[33m        \"\"\"\u001b[39;49;00m\r\n",
+      "        \u001b[36msuper\u001b[39;49;00m(BinaryClassifier, \u001b[36mself\u001b[39;49;00m).\u001b[32m__init__\u001b[39;49;00m()\r\n",
+      "\r\n",
+      "        \u001b[37m# define any initial layers, here\u001b[39;49;00m\r\n",
+      "        \u001b[36mself\u001b[39;49;00m.fc1 = nn.Linear(input_features, hidden_dim)\r\n",
+      "        \u001b[36mself\u001b[39;49;00m.dropout = nn.Dropout(\u001b[34m0.3\u001b[39;49;00m)\r\n",
+      "        \u001b[36mself\u001b[39;49;00m.fc2 = nn.Linear(hidden_dim, output_dim)\r\n",
+      "        \r\n",
+      "        \u001b[37m# sigmoid layer\u001b[39;49;00m\r\n",
+      "        \u001b[36mself\u001b[39;49;00m.sig = nn.Sigmoid()\r\n",
+      "        \r\n",
+      "    \u001b[37m## TODO: Define the feedforward behavior of the network\u001b[39;49;00m\r\n",
+      "    \u001b[34mdef\u001b[39;49;00m \u001b[32mforward\u001b[39;49;00m(\u001b[36mself\u001b[39;49;00m, x):\r\n",
+      "        \u001b[33m\"\"\"\u001b[39;49;00m\r\n",
+      "\u001b[33m        Perform a forward pass of our model on input features, x.\u001b[39;49;00m\r\n",
+      "\u001b[33m        :param x: A batch of input features of size (batch_size, input_features)\u001b[39;49;00m\r\n",
+      "\u001b[33m        :return: A single, sigmoid-activated value as output\u001b[39;49;00m\r\n",
+      "\u001b[33m        \"\"\"\u001b[39;49;00m\r\n",
+      "        \r\n",
+      "        \u001b[37m# define the feedforward behavior\u001b[39;49;00m\r\n",
+      "        x = \u001b[36mself\u001b[39;49;00m.fc1(x)\r\n",
+      "        x = F.relu(x)\r\n",
+      "        x = \u001b[36mself\u001b[39;49;00m.dropout(x)\r\n",
+      "        x = \u001b[36mself\u001b[39;49;00m.fc2(x)\r\n",
+      "        x = \u001b[36mself\u001b[39;49;00m.sig(x)\r\n",
+      "        \r\n",
+      "        \u001b[34mreturn\u001b[39;49;00m x\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pygmentize '../src/utils/model.py'"
    ]
   },
   {
